--- a/views/pages/db-info.ejs
+++ b/views/pages/db-info.ejs
@@ -11,9 +11,18 @@
             <ul>
             <% tables.forEach(function(r) { %>
                 <li><%= r.table %>: <%= r.column %> (<%= r.type %>)</li>
-            <% }); %>
-            
+            <% }); %>           
                 
+            </ul>
+            <h1>Observationw</h1>
+            <ul>
+            
+                <% obs.forEach(function(r) { %>
+                
+                <li><%= r.tasks_id %> for <%= r.duration.minutes || "00" %>:<%= r.duration.seconds || "00" %></li>
+                
+                
+                <% }); %> 
             </ul>
         </body>
 
