--- a/views/pages/db-info.ejs
+++ b/views/pages/db-info.ejs
@@ -14,7 +14,7 @@
             <% }); %>           
                 
             </ul>
-            <h1>Observationw</h1>
+            <h1>Observations</h1>
             <ul>
             
                 <% obs.forEach(function(r) { %>
