--- a/views/pages/db-info.ejs
+++ b/views/pages/db-info.ejs
@@ -19,9 +19,8 @@
             
                 <% obs.forEach(function(r) { %>
                 
-                <li><%= r.tasks_id %> for <%= r.duration.minutes || "00" %>:<%= r.duration.seconds || "00" %></li>
-                
-                
+                <li><%= r.tasks_id %> for <%= r.duration.minutes %>:<%= r.duration.seconds %></li>
+                                
                 <% }); %> 
             </ul>
         </body>
